# zig-cc

./: Cargo.toml  README.md  zig.toml
cmake/: zig-x86_64-unknown-windows-gnu.cmake
src/: config.rs  zig-ar.rs  zig-cc.rs  zig-cpp.rs  zig-cppfilt.rs  zig-dlltool.rs  zig-lib.rs  zig-objcopy.rs  zig-objdump.rs  zig-ranlib.rs  zig-runlib.rs  zig-size.rs  zig.rs
